# darlingdle

./: .clang-format  .gitignore  CMakeLists.txt  install.sh
data/: frases.txt
include/: Frase.hpp  alias.hpp  darlingdle_simulation.hpp  game_state.hpp
src/: main.cpp
src/frases/: darlingdle_simulation.cpp  frases.cpp
